--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  ffigen: ^7.2.0
 
 dev_dependencies:
   flutter_test:
@@ -87,3 +88,10 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+ffigen:
+  name: 'MyRandom'
+  output: 'lib/my_random.dart'
+  headers:
+    entry-points:
+      - 'src/my_random.h'
