--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,6 @@ jobs:
         flutter-version: '3.3.8'
     - run: flutter pub get
     - run: dart run ffigen
-    - run: flutter test
+#    - run: flutter test
     - run: flutter build apk
     - run: flutter build appbundle
