--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,8 @@ app.*.map.json
 .fvm/flutter_sdk
 /lib/my_random.dart
 /android/app/.cxx
+linux/flutter/generated_plugin_registrant.cc
+linux/flutter/generated_plugins.cmake
+windows/flutter/generated_plugins.cmake
+windows/flutter/generated_plugin_registrant.cc
+macos/Flutter/GeneratedPluginRegistrant.swift
