--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,45 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+
+  # Save local data
+  shared_preferences: ^2.0.13
+
+  # List equality
+  collection: ^1.15.0
+
+  # Foreign Function Interface
   ffigen: ^7.2.0
+
+  # Crypto
+  pointycastle: ^3.5.2
+
+  # Save Log File
+  file_picker: ^5.2.2
+
+  # Secure Storage
+  flutter_secure_storage: ^6.0.0
+
+  # Share content
+  share_plus: ^6.3.0
+
+  # Create files
+  path_provider: ^2.0.11
+
+  # Serialport
+  flutter_libserialport: ^0.3.0
+
+  # BLE
+  flutter_reactive_ble: ^5.0.2
+
+  # Permission
+  permission_handler: ^10.0.0
+
+  # Open Settings
+  app_settings: ^4.1.8
+
+  # Device info
+  device_info_plus: ^8.0.0
 
 dev_dependencies:
   flutter_test:
